- Completed pages: --Auth page. Users will be redirected to this page when trying to access the site dashboard to login/signup -Style improvements: - trade-entry and trade-history and fixed the sidebar size. -Completed the styles for the auth page. -Code improvements in import page to parse excel sheets. Works well with Fidelity and Schwab. - Added the theme.js script to trade-history and trade-entry pages. -Fixed a rounding issue when importing trades where prices had uncessary trailing digits.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="#pricing" class="pricing">Pricing</a></li>
       <li><a href="#about"  class="about">About</a></li>
       <li><a href="/pages/contact.html">Contact</a></li>
-      <li><a href="/pages/dashboard.html" class="cta-button">Dashboard</a></li>
+      <li><a href="#" class="cta-button">Dashboard</a></li>
     </ul>
     <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
   </nav>
@@ -82,8 +82,8 @@
       <div class="feature-card">
         <!-- Free Platform -->
         <i class="fas fa-wallet"></i>
-        <h3>Free Platform</h3>
-        <p>Don't pay premium prices for basic features. TradeLab is a free platform that covers all the essential
+        <h3>Free</h3>
+        <p>Don't pay premium prices for basic features. TradeLab is a free alternative that covers all the essential
           features you need.</p>
       </div>
   </section>
@@ -128,7 +128,7 @@
 
         <div class="about-item">
           <h3>Why We Do It</h3>
-          <p>We understand that the biggest costs in online platforms are compute, storage, and hosting. For most
+          <p>We understand that the biggest costs in online platforms are compute, storage, and hosting. For
             traders, these costs are minimal - so why should you pay premium prices? We're committed to offering a free
             alternative that covers all the essential features you need.</p>
         </div>
@@ -141,7 +141,7 @@
     <div class="cta-content">
       <h2>Ready to Improve Your Trading?</h2>
       <p>Join other traders who are already tracking their success with TradeLab.</p>
-      <a href="#" class="btn-secondary">Sign Up Free</a>
+      <a href="#" class="btn-secondary cta-button">Sign Up Free</a>
     </div>
   </section>
 
@@ -172,9 +172,8 @@
         </ul>
       </div>
       <div class="footer-section">
-        <h3>Follow Us</h3>
+        <h3>Social</h3>
         <div class="social-links">
-          <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
           <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
           <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
         </div>
@@ -186,6 +185,7 @@
   </footer>
   <!-- <script src="/scripts/global.js"></script> -->
    <script src="/script/global.js"></script>
+   <script src="./scripts/authCheck.js"></script>
    <script>
     const index = document.querySelector(".index");
     const features = document.querySelector(".features");
