--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -24,7 +24,7 @@
       <li><a href="../index.html#pricing">Pricing</a></li>
       <li><a href="../index.html#about">About</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
+      <li><a href="calendar-view.html" class="cta-button active">Dashboard</a></li>
     </ul>
     <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
   </nav>
@@ -57,7 +57,7 @@
           <i class="fas fa-globe"></i>
           <span>Market Insights</span>
         </a>
-        <a href="dashboard.html" class="sidebar-link">
+        <a href="calendar-view.html" class="sidebar-link">
           <i class="fas fa-calendar-alt"></i>
           <span>Calendar</span>
         </a>
@@ -337,9 +337,8 @@
         </ul>
       </div>
       <div class="footer-section">
-        <h3>Follow Us</h3>
+        <h3>Social</h3>
         <div class="social-links">
-          <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
           <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
           <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
         </div>
