--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -19,12 +19,12 @@
     <nav class="navbar">
       <div class="nav-brand"><a href="../index.html">TradeLab</a></div>
       <ul class="nav-links">
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="../index.html#features">Features</a></li>
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
+        <li><a href="calendar-view.html" class="cta-button active">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
@@ -231,9 +231,8 @@
           </ul>
         </div>
         <div class="footer-section">
-          <h3>Follow Us</h3>
+          <h3>Social</h3>
           <div class="social-links">
-            <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
             <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
           </div>
@@ -307,6 +306,7 @@
     <script src="../scripts/TradeObjectHandler.js"></script>
     <script src="../scripts/tradeHistory.js"></script>
     <script src="../scripts/tradeModal.js"></script>
+    <script src="../scripts/theme.js"></script>
     <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   </body>
 </html>
