- Fixed a few styling issues with import.html

--- a/pages/import.html
+++ b/pages/import.html
@@ -188,6 +188,14 @@
           <li><a href="risk-disclosure.html">Risk Disclosure</a></li>
         </ul>
       </div>
+        <div class="footer-section">
+          <h3>Social</h3>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+            <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="footer-bottom">
       <p>&copy; 2025 TradeLab. All rights reserved.</p>
