--- a/pages/import.html
+++ b/pages/import.html
@@ -28,7 +28,7 @@
 
     .modal-content {
       background-color: white;
-      color:rgba(0, 0, 0, 0.6);
+      color: rgba(0, 0, 0, 0.6);
       margin: auto;
       padding: 20px;
       border-radius: 8px;
@@ -45,7 +45,8 @@
       margin-bottom: 20px;
     }
 
-    .close-modal, .close-details {
+    .close-modal,
+    .close-details {
       background: none;
       border: none;
       font-size: 24px;
@@ -75,8 +76,8 @@
 
     .trades-table th,
     .trades-table td,
-      .details-table th,
-      .details-table td {
+    .details-table th,
+    .details-table td {
       padding: 12px;
       text-align: left;
       border-bottom: 1px solid #ddd;
@@ -87,49 +88,49 @@
       background-color: #f8f9fa;
       font-weight: 600;
     }
-    
+
     .trades-table tbody tr {
-        cursor: pointer;
-      }
+      cursor: pointer;
+    }
 
     .trades-table tbody tr:hover {
       background-color: #f5f5f5;
     }
-    
+
     .trade-details {
-        margin-top: 20px;
-        padding: 20px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        background-color: #fff;
-      }
+      margin-top: 20px;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      background-color: #fff;
+    }
 
-      .trade-details.hidden {
-        display: none;
-      }
+    .trade-details.hidden {
+      display: none;
+    }
 
-      .trade-details-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 15px;
-      }
+    .trade-details-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
 
-      .trade-entries,
-      .trade-exits {
-        margin-bottom: 20px;
-      }
+    .trade-entries,
+    .trade-exits {
+      margin-bottom: 20px;
+    }
 
-      .details-table {
-        width: 100%;
-        margin-bottom: 15px;
-      }
+    .details-table {
+      width: 100%;
+      margin-bottom: 15px;
+    }
 
-      .trade-actions {
-        display: flex;
-        gap: 10px;
-        margin-top: 15px;
-      }
+    .trade-actions {
+      display: flex;
+      gap: 10px;
+      margin-top: 15px;
+    }
 
     .verification-controls {
       display: flex;
@@ -143,52 +144,69 @@
     }
 
     .incomplete-trade {
-        color: #f57c00;
-      }
-
-      .complete-trade {
-        color: #388e3c;
-      }
-
-      .warning {
-        color: #d32f2f;
+      color: #f57c00;
     }
+
+    .complete-trade {
+      color: #388e3c;
+    }
+
+    .warning {
+      color: #d32f2f;
+    }
+
+
+    .trade-checkbox {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+    }
+
+    .trades-table tr.disabled {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+
+    .modal.stacked {
+      z-index: 1001;
+    }
+
     .btn-primary {
-    background-color: var(--accent-primary-light);
-    color: white;
-    padding: 1rem 2rem;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: 600;
-    transition: all 0.3s ease;
-}
+      background-color: var(--accent-primary-light);
+      color: white;
+      padding: 1rem 2rem;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s ease;
+    }
 
-.btn-primary:hover {
-    background-color: var(--accent-primary);
-    transform: translateY(-2px);
-}
+    .btn-primary:hover {
+      background-color: var(--accent-primary);
+      transform: translateY(-2px);
+    }
 
-.btn-secondary {
-    background-color: white;
-    color: var(--accent-primary-light);
-    padding: 1rem 2rem;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: 600;
-    border: 2px solid var(--accent-primary-light);
-    transition: all 0.3s ease;
-}
+    .btn-secondary {
+      background-color: white;
+      color: var(--accent-primary-light);
+      padding: 1rem 2rem;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: 600;
+      border: 2px solid var(--accent-primary-light);
+      transition: all 0.3s ease;
+    }
 
-.btn-secondary:hover {
-    background-color: var(--accent-secondary-light);
-    color: white;
-    transform: translateY(-2px);
-    border-color: black;
-}
+    .btn-secondary:hover {
+      background-color: var(--accent-secondary-light);
+      color: white;
+      transform: translateY(-2px);
+      border-color: black;
+    }
 
-#cancelImportBtn:hover {
-  background-color: #e74c3c;
-}
+    #cancelImportBtn:hover {
+      background-color: #e74c3c;
+    }
   </style>
 </head>
 
@@ -343,81 +361,117 @@
     </main>
   </div>
 
-      <!-- Confirmation Modal -->
-      <div id="tradeVerificationModal" class="modal hidden">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2>Verify Your Trades</h2>
-            <button class="close-modal">&times;</button>
+  <!-- Confirmation Modal -->
+  <div id="tradeVerificationModal" class="modal hidden">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>Verify Your Trades</h2>
+        <button class="close-modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <div class="verification-instructions">
+          <p>Review your imported trades. Click on any trade to see its details. If trades are not paired correctly, you
+            can unpair them or pair additional trades together.</p>
+        </div>
+        <div class="trades-table-container">
+          <table id="batchTradesTable" class="trades-table">
+            <thead>
+              <tr>
+                <th>Symbol</th>
+                <th>Entry Date</th>
+                <th>Exit Date</th>
+                <th>Total Quantity</th>
+                <th>Avg Entry</th>
+                <th>Avg Exit</th>
+                <th>P/L</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody id="batchTradesBody"></tbody>
+          </table>
+        </div>
+        <div id="tradeDetails" class="trade-details hidden">
+          <div class="trade-details-header">
+            <h3>Trade Details</h3>
+            <button class="close-details">&times;</button>
           </div>
-          <div class="modal-body">
-            <div class="verification-instructions">
-              <p>Review your imported trades. Click on any trade to see its details. If trades are not paired correctly, you can unpair them or pair additional trades together.</p>
-            </div>
-            <div class="trades-table-container">
-              <table id="batchTradesTable" class="trades-table">
+          <div class="trade-details-content">
+            <div class="trade-entries">
+              <h4>Entries</h4>
+              <table class="details-table">
                 <thead>
                   <tr>
-                    <th>Symbol</th>
-                    <th>Entry Date</th>
-                    <th>Exit Date</th>
-                    <th>Total Quantity</th>
-                    <th>Avg Entry</th>
-                    <th>Avg Exit</th>
-                    <th>P/L</th>
-                    <th>Status</th>
+                    <th>Date</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Actions</th>
                   </tr>
                 </thead>
-                <tbody id="batchTradesBody"></tbody>
+                <tbody id="entriesTableBody"></tbody>
               </table>
             </div>
-            <div id="tradeDetails" class="trade-details hidden">
-              <div class="trade-details-header">
-                <h3>Trade Details</h3>
-                <button class="close-details">&times;</button>
-              </div>
-              <div class="trade-details-content">
-                <div class="trade-entries">
-                  <h4>Entries</h4>
-                  <table class="details-table">
-                    <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>Price</th>
-                        <th>Quantity</th>
-                        <th>Actions</th>
-                      </tr>
-                    </thead>
-                    <tbody id="entriesTableBody"></tbody>
-                  </table>
-                </div>
-                <div class="trade-exits">
-                  <h4>Exits</h4>
-                  <table class="details-table">
-                    <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>Price</th>
-                        <th>Quantity</th>
-                        <th>Actions</th>
-                      </tr>
-                    </thead>
-                    <tbody id="exitsTableBody"></tbody>
-                  </table>
-                </div>
-                <div class="trade-actions">
-                  <button id="unpairSelectedBtn" class="btn-secondary" disabled>Unpair Selected</button>
-                  <button id="addTradesBtn" class="btn-secondary">Add Trades to This Batch</button>
-                </div>
-              </div>
+            <div class="trade-exits">
+              <h4>Exits</h4>
+              <table class="details-table">
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody id="exitsTableBody"></tbody>
+              </table>
             </div>
-            <div class="verification-controls">
-              <button id="confirmTradesBtn" class="btn-primary">Data is Correct</button>
-              <button id="cancelImportBtn" class="btn-secondary">Cancel</button>
+            <div class="trade-actions">
+              <button id="unpairSelectedBtn" class="btn-secondary" disabled>Unpair Selected</button>
+              <button id="addTradesBtn" class="btn-secondary">Add Trades to This Batch</button>
             </div>
           </div>
         </div>
+        <div class="verification-controls">
+          <button id="confirmTradesBtn" class="btn-primary">Data is Correct</button>
+          <button id="cancelImportBtn" class="btn-secondary">Cancel</button>
+        </div>
       </div>
+    </div>
+  </div>
+
+  
+    <!-- Unpaired Trades Modal -->
+    <div id="unpairedTradesModal" class="modal hidden">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Add Trades to Batch</h2>
+          <button class="close-modal" data-modal="unpairedTradesModal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="verification-instructions">
+            <p>Select trades to add to the current batch. Only trades of the same symbol can be added.</p>
+          </div>
+          <div class="trades-table-container">
+            <table id="unpairedTradesTable" class="trades-table">
+              <thead>
+                <tr>
+                  <th>Select</th>
+                  <th>Date</th>
+                  <th>Symbol</th>
+                  <th>Action</th>
+                  <th>Price</th>
+                  <th>Quantity</th>
+                </tr>
+              </thead>
+              <tbody id="unpairedTradesBody"></tbody>
+            </table>
+          </div>
+          <div class="verification-controls">
+            <button id="addSelectedTradesBtn" class="primary-btn">Add Selected</button>
+            <button class="secondary-btn" data-modal="unpairedTradesModal">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <!-- Footer -->
   <footer class="footer">
@@ -444,14 +498,14 @@
           <li><a href="risk-disclosure.html">Risk Disclosure</a></li>
         </ul>
       </div>
-        <div class="footer-section">
-          <h3>Social</h3>
-          <div class="social-links">
-            <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
-            <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
-          </div>
+      <div class="footer-section">
+        <h3>Social</h3>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+          <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
         </div>
       </div>
+    </div>
     </div>
     <div class="footer-bottom">
       <p>&copy; 2025 TradeLab. All rights reserved.</p>
