--- a/pages/import.html
+++ b/pages/import.html
@@ -10,204 +10,6 @@
   <link rel="stylesheet" href="/styles/import.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
   <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
-  <style>
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 1000;
-    }
-
-    .modal.show {
-      display: flex;
-    }
-
-    .modal-content {
-      background-color: white;
-      color: rgba(0, 0, 0, 0.6);
-      margin: auto;
-      padding: 20px;
-      border-radius: 8px;
-      width: 90%;
-      max-width: 1200px;
-      max-height: 90vh;
-      overflow-y: auto;
-    }
-
-    .modal-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-
-    .close-modal,
-    .close-details {
-      background: none;
-      border: none;
-      font-size: 24px;
-      cursor: pointer;
-    }
-
-    .close-modal:hover {
-      color: #e74c3c;
-    }
-
-    .verification-instructions {
-      margin-bottom: 20px;
-      padding: 15px;
-      background-color: #f8f9fa;
-      border-radius: 4px;
-    }
-
-    .trades-table-container {
-      margin-bottom: 20px;
-      overflow-x: auto;
-    }
-
-    .trades-table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    .trades-table th,
-    .trades-table td,
-    .details-table th,
-    .details-table td {
-      padding: 12px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .trades-table th,
-    .details-table th {
-      background-color: #f8f9fa;
-      font-weight: 600;
-    }
-
-    .trades-table tbody tr {
-      cursor: pointer;
-    }
-
-    .trades-table tbody tr:hover {
-      background-color: #f5f5f5;
-    }
-
-    .trade-details {
-      margin-top: 20px;
-      padding: 20px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      background-color: #fff;
-    }
-
-    .trade-details.hidden {
-      display: none;
-    }
-
-    .trade-details-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 15px;
-    }
-
-    .trade-entries,
-    .trade-exits {
-      margin-bottom: 20px;
-    }
-
-    .details-table {
-      width: 100%;
-      margin-bottom: 15px;
-    }
-
-    .trade-actions {
-      display: flex;
-      gap: 10px;
-      margin-top: 15px;
-    }
-
-    .verification-controls {
-      display: flex;
-      justify-content: flex-end;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .selected-row {
-      background-color: #e3f2fd !important;
-    }
-
-    .incomplete-trade {
-      color: #f57c00;
-    }
-
-    .complete-trade {
-      color: #388e3c;
-    }
-
-    .warning {
-      color: #d32f2f;
-    }
-
-
-    .trade-checkbox {
-      width: 18px;
-      height: 18px;
-      cursor: pointer;
-    }
-
-    .trades-table tr.disabled {
-      opacity: 0.5;
-      pointer-events: none;
-    }
-
-    .modal.stacked {
-      z-index: 1001;
-    }
-
-    .btn-primary {
-      background-color: var(--accent-primary-light);
-      color: white;
-      padding: 1rem 2rem;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: all 0.3s ease;
-    }
-
-    .btn-primary:hover {
-      background-color: var(--accent-primary);
-      transform: translateY(-2px);
-    }
-
-    .btn-secondary {
-      background-color: white;
-      color: var(--accent-primary-light);
-      padding: 1rem 2rem;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: 600;
-      border: 2px solid var(--accent-primary-light);
-      transition: all 0.3s ease;
-    }
-
-    .btn-secondary:hover {
-      background-color: var(--accent-secondary-light);
-      color: white;
-      transform: translateY(-2px);
-      border-color: black;
-    }
-
-    #cancelImportBtn:hover {
-      background-color: #e74c3c;
-    }
-  </style>
 </head>
 
 <body>
@@ -466,8 +268,8 @@
             </table>
           </div>
           <div class="verification-controls">
-            <button id="addSelectedTradesBtn" class="primary-btn">Add Selected</button>
-            <button class="secondary-btn" data-modal="unpairedTradesModal">Cancel</button>
+            <button id="addSelectedTradesBtn" class="btn-primary">Add Selected</button>
+            <button class="btn-secondary" data-modal="unpairedTradesModal">Cancel</button>
           </div>
         </div>
       </div>
