--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -144,132 +144,38 @@
       <div class="content-body">
         <div class="trade-form">
           <h2>Add New Trade</h2>
-          
-          <!-- Tabs -->
-          <div class="trade-tabs">
-            <button class="tab-button active" data-tab="stocks">Stocks</button>
-            <button class="tab-button" data-tab="futures">Futures</button>
-            <button class="tab-button" data-tab="options">Options</button>
-            <button class="tab-button" data-tab="crypto">Crypto</button>
-          </div>
-
           <form id="tradeForm">
-            <!-- Stocks Tab -->
-            <div class="tab-content active" id="stocks-tab">
-              <div class="form-group">
-                <label for="symbol">Symbol:</label>
-                <input type="text" id="symbol" required placeholder="e.g., AAPL" />
-              </div>
-
-              <div class="form-group">
-                <label for="entryPrice">Entry Price:</label>
-                <input type="text" id="entryPrice" required />
-              </div>
-
-              <div class="form-group">
-                <label for="exitPrice">Exit Price:</label>
-                <input type="text" id="exitPrice" required />
-              </div>
-
-              <div class="form-group">
-                <label for="quantity">Quantity:</label>
-                <input type="text" id="quantity" required />
-              </div>
+            <div class="form-group">
+              <label for="symbol">Symbol:</label>
+              <input type="text" id="symbol" required placeholder="e.g., AAPL" />
             </div>
 
-            <!-- Futures Tab -->
-            <div class="tab-content" id="futures-tab">
-              <div class="form-group">
-                <label for="futures-symbol">Contract:</label>
-                <input type="text" id="futures-symbol" placeholder="e.g., ES" />
-              </div>
-
-              <div class="form-group">
-                <label for="futures-expiry">Expiration:</label>
-                <input type="month" id="futures-expiry" />
-              </div>
-
-              <div class="form-group">
-                <label for="futures-entry">Entry Price:</label>
-                <input type="text" id="futures-entry" />
-              </div>
-
-              <div class="form-group">
-                <label for="futures-exit">Exit Price:</label>
-                <input type="text" id="futures-exit" />
-              </div>
-
-              <div class="form-group">
-                <label for="futures-quantity">Contracts:</label>
-                <input type="number" id="futures-quantity" min="1" />
-              </div>
+            <div class="form-group">
+              <label for="market">Market:</label>
+              <select id="market" required>
+                <option value="stock">Stock</option>
+                <option value="futures">Futures</option>
+                <!-- <option value="forex">Forex</option> -->
+                <option value="crypto">Cryptocurrency</option>
+                <option value="options">Options</option>
+              </select>
             </div>
 
-            <!-- Options Tab -->
-            <div class="tab-content" id="options-tab">
-              <div class="form-group">
-                <label for="options-underlying">Underlying:</label>
-                <input type="text" id="options-underlying" placeholder="e.g., SPY" />
-              </div>
-
-              <div class="form-group">
-                <label for="options-type">Type:</label>
-                <select id="options-type">
-                  <option value="call">Call</option>
-                  <option value="put">Put</option>
-                </select>
-              </div>
-
-              <div class="form-group">
-                <label for="options-strike">Strike Price:</label>
-                <input type="text" id="options-strike" />
-              </div>
-
-              <div class="form-group">
-                <label for="options-expiry">Expiration:</label>
-                <input type="date" id="options-expiry" />
-              </div>
-
-              <div class="form-group">
-                <label for="options-entry">Entry Price:</label>
-                <input type="text" id="options-entry" />
-              </div>
-
-              <div class="form-group">
-                <label for="options-exit">Exit Price:</label>
-                <input type="text" id="options-exit" />
-              </div>
-
-              <div class="form-group">
-                <label for="options-quantity">Contracts:</label>
-                <input type="number" id="options-quantity" min="1" />
-              </div>
+            <div class="form-group">
+              <label for="entryPrice">Entry Price:</label>
+              <input type="text" id="entryPrice" required />
             </div>
 
-            <!-- Crypto Tab -->
-            <div class="tab-content" id="crypto-tab">
-              <div class="form-group">
-                <label for="crypto-symbol">Symbol:</label>
-                <input type="text" id="crypto-symbol" placeholder="e.g., BTC/USD" />
-              </div>
-
-              <div class="form-group">
-                <label for="crypto-entry">Entry Price:</label>
-                <input type="text" id="crypto-entry" />
-              </div>
-
-              <div class="form-group">
-                <label for="crypto-exit">Exit Price:</label>
-                <input type="text" id="crypto-exit" />
-              </div>
-
-              <div class="form-group">
-                <label for="crypto-quantity">Quantity:</label>
-                <input type="text" id="crypto-quantity" />
-              </div>
+            <div class="form-group">
+              <label for="exitPrice">Exit Price:</label>
+              <input type="text" id="exitPrice" required />
             </div>
 
-            <!-- Common fields for all tabs -->
+            <div class="form-group">
+              <label for="quantity">Quantity:</label>
+              <input type="text" id="quantity" required />
+            </div>
+
             <div class="form-group">
               <label for="date">Date:</label>
               <input type="datetime-local" id="date" required />
@@ -293,10 +199,7 @@
               <textarea id="notes" rows="4" placeholder="Add your trade notes here..."></textarea>
             </div>
 
-            <div class="form-actions">
-              <button type="submit" class="submit-btn">Add Trade</button>
-              <button type="reset" class="reset-btn">Reset</button>
-            </div>
+            <button type="submit" class="btn-submit">Add Trade</button>
           </form>
         </div>
         <div class="trades-list">
@@ -507,7 +410,7 @@
 
   <script src="../scripts/global.js"></script>
   <script src="../scripts/theme.js"></script>
-  <script src="/scripts/trade-entry.js"></script>
+  <script src="../scripts/tradeEntry.js"></script>
   <script src="../scripts/dashboard.js"></script>
   <script src="../scripts/TradeObjectHandler.js"></script>
   <script src="../scripts/tradeModal.js"></script>
