-Fixed cumulative pnl and cumulative drawdown charts. They both should now display properly by date with each date representing a point in the chart.

--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -117,7 +117,7 @@
         <!-- Charts -->
         <div class="chart-card wide equity-chart">
           <div class="chart-header">
-            <h3>Equity Curve</h3>
+            <h3>Cumulative PnL</h3>
             <!-- <div class="view-switch">
                   <label>View by:</label>
                   <div class="switch-buttons">
