-Renamed calendar-view page to calendar-dashboard -The analytics page has updated graphs: Cumulative PnL - it now shows proper color when pnl is negative and when is positive. Position MAE and Price MAE bars now display properly with right size and color. -Fixed PnL card and it now actually displays total PnL and ROI percentage. -- Fixed height for sidebar to 'fit-content', it should now adjust height based on content.

--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -93,7 +93,7 @@
       <div class="cumulative-pnl">
         <h2>Cumulative P/L</h2>
         <div class="value">$0.00</div>
-        <div class="percentage">0.00%</div>
+        <div class="roi">0.00%</div>
       </div>
 
       <div class="analytics-grid">
