-Updated landing page picture with the current version of the site. -Fixed a path issue when clicking on the CTA buttons in landing page. -Fixed Auth.js and authCheck.js paths for proper routing when clicking CTA buttons in landing page.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="hero-image">
-      <img src="/assets/dashboard.png" alt="Trading Dashboard Preview" />
+      <img src="/assets/landing-page.png" alt="Trading Dashboard Preview" />
     </div>
   </section>
   <!-- Features Section -->
